%% Billing, payments & maintenance
classDiagram
direction LR
class TenantProfile {
  +int TenantID
  +int? UserID
  +int? UnitID
  +string FullName
  +string Status
  +decimal AdvanceCredit
}
class Billing {
  +int BillingID
  +int TenantID
  +DateTime BillingPeriod
  +decimal AmountDue
  +decimal? AmountPaid
  +decimal Deposit
  +decimal Advance
  +DateTime DueDate
  +decimal AdvanceFromOverpayment
  +DateTime? DatePaid
  +string Status
  +DateTime? ArchivedAt
}
class Payment {
  +int PaymentID
  +int BillingID
  +decimal Amount
  +DateTime DatePaid
  +string? Method
  +string? Remarks
  +DateTime RecordedAt
}
class User {
  +int UserID
  +string Username
  +string Role
  +bool IsActive
}
class MaintenanceRequest {
  +int RequestID
  +int TenantID
  +int? UnitID
  +int? AssignedStaffID
  +string Category
  +string Description
  +string Priority
  +string Status
  +DateTime DateSubmitted
  +DateTime? DateResolved
  +DateTime? TenantArchivedAt
  +DateTime? StaffArchivedAt
}
class Unit {
  +int UnitID
  +string UnitNumber
  +string UnitType
  +string Status
}
TenantProfile "1" -- "0..*" Billing : bills
Billing "1" -- "0..*" Payment : payments
TenantProfile "1" -- "0..*" MaintenanceRequest : submits
User "0..1" -- "0..*" MaintenanceRequest : assigned staff
Unit "0..1" -- "0..*" MaintenanceRequest : repair unit
